import MockDate from 'mockdate'

import {
  buildCalendarContext,
  buildCalendarContextDayGeneric,
  buildCalendarContextDaySingle,
  buildCalendarContextDayMulti,
  buildCalendarContextDayRange,
} from '../src/calendar'
import { RepickState } from '../src/types'

describe('buildCalendarContextDaySingle', () => {
  const highlighted = new Date('2018-01-01')

  const state: RepickState = {
    highlighted,
    mode: 'single',
    selected: highlighted,
  }

  it('selected', () => {
    expect(
      buildCalendarContextDaySingle(state, highlighted, highlighted),
    ).toMatchObject({
      selected: true,
    })
  })

  it('not selected', () => {
    expect(
      buildCalendarContextDaySingle(state, highlighted, new Date('2018-02-01')),
    ).toMatchObject({
      selected: false,
    })
  })
})

describe('buildCalendarContextDayMulti', () => {
  const dates = [
    new Date('2018-01-01'),
    new Date('2018-01-02'),
    new Date('2018-01-03'),
  ]

  const state: RepickState = {
    highlighted: new Date('2018-01-01'),
    mode: 'multi',
    selected: dates,
  }

  it('selected, 1st', () => {
    expect(
      buildCalendarContextDayMulti(state, dates[0], dates[0]),
    ).toMatchObject({
      selected: true,
    })
  })
  it('selected, 2nd', () => {
    expect(
      buildCalendarContextDayMulti(state, dates[0], dates[1]),
    ).toMatchObject({
      selected: true,
    })
  })
  it('selected, 3rd', () => {
    expect(
      buildCalendarContextDayMulti(state, dates[0], dates[2]),
    ).toMatchObject({
      selected: true,
    })
  })
  it('not selected', () => {
    expect(
      buildCalendarContextDayMulti(state, dates[0], new Date('2018-02-01')),
    ).toMatchObject({
      selected: false,
    })
  })
})

describe('buildCalendarContextDayRange', () => {
  const range = [new Date('2018-01-01'), new Date('2018-01-31')] as [Date, Date]

  const state: RepickState = {
    highlighted: new Date('2018-01-01'),
    mode: 'range',
    selected: range,
  }

  it('selected 1st', () => {
    expect(
      buildCalendarContextDayRange(state, range[0], range[0]),
    ).toMatchObject({
      selected: true,
      rangeStart: true,
      rangeEnd: false,
    })
  })

  it('selected 2nd', () => {
    expect(
      buildCalendarContextDayRange(state, range[0], range[1]),
    ).toMatchObject({
      selected: true,
      rangeStart: false,
      rangeEnd: true,
    })
  })

  it('selected in range', () => {
    expect(
      buildCalendarContextDayRange(state, range[0], new Date('2018-01-15')),
    ).toMatchObject({
      selected: true,
      rangeStart: false,
      rangeEnd: false,
    })
  })

  it('not selected', () => {
    expect(
      buildCalendarContextDayRange(state, range[0], new Date('2018-02-01')),
    ).toMatchObject({
      selected: false,
      rangeStart: false,
      rangeEnd: false,
    })
  })
})

describe('buildCalendarContextDayGeneric', () => {
  it('today', () => {
    const date = new Date('2018-02-01')
    MockDate.set(date)

    expect(
      buildCalendarContextDayGeneric(() => ({}))(
        {
          highlighted: new Date('2018-01-01'),
          mode: 'single',
          selected: null,
        },
        date,
        date,
      ),
    ).toMatchObject({
      today: true,
    })

    MockDate.reset()
  })

  it('current', () => {
    const date = new Date('2018-02-01')
    const stateDate = date

    expect(
      buildCalendarContextDayGeneric(() => ({}))(
        {
          highlighted: stateDate,
          mode: 'single',
          selected: null,
        },
        stateDate,
        date,
      ),
    ).toMatchObject({
      highlighted: true,
    })
  })

  it('previous month', () => {
    const date = new Date('2018-01-01')
    const stateDate = new Date('2018-02-01')

    expect(
      buildCalendarContextDayGeneric(() => ({}))(
        {
          highlighted: stateDate,
          mode: 'single',
          selected: null,
        },
        stateDate,
        date,
      ),
    ).toMatchObject({
      nextMonth: false,
      prevMonth: true,
    })
  })

  it('next month', () => {
    const date = new Date('2018-02-01')
    const stateDate = new Date('2018-01-01')

    expect(
      buildCalendarContextDayGeneric(() => ({}))(
        {
          highlighted: stateDate,
          mode: 'single',
          selected: null,
        },
        stateDate,
        date,
      ),
    ).toMatchObject({
      nextMonth: true,
      prevMonth: false,
    })
  })

  it('disabled', () => {
    const disabledDate = new Date('2018-02-01')

    expect(
      buildCalendarContextDayGeneric(() => ({}))(
        {
          highlighted: new Date('2018-01-01'),
          mode: 'single',
          selected: null,
          disabledDates: [disabledDate],
        },
        disabledDate,
        disabledDate,
      ),
    ).toMatchObject({
      disabled: true,
    })
  })
})

describe('buildCalendarContext', () => {
  it('mode: single', () => {
    const expectedDate = new Date('2018-01-01 00:00:00')
    const expectedSelected = new Date('2018-01-10 00:00:00')
    const context = buildCalendarContext({
      highlighted: expectedDate,
      mode: 'single',
      selected: expectedSelected,
    })

    expect(context).toMatchSnapshot()
  })

  it('mode: multi', () => {
    const expectedDate = new Date('2018-01-01 00:00:00')
    const expectedSelected = [
      new Date('2018-01-10 00:00:00'),
      new Date('2018-01-20 00:00:00'),
    ]
    const context = buildCalendarContext({
      highlighted: expectedDate,
      mode: 'multi',
      selected: expectedSelected,
    })

    expect(context).toMatchSnapshot()
  })

  it('mode: range', () => {
    const expectedDate = new Date('2018-01-01 00:00:00')
    const expectedSelected = [
      new Date('2018-01-10 00:00:00'),
      new Date('2018-01-20 00:00:00'),
    ] as [Date, Date]

    const context = buildCalendarContext({
      highlighted: expectedDate,
      mode: 'range',
      selected: expectedSelected,
    })

    expect(context).toMatchSnapshot()
  })
})
