// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCalendarContext mode: multi 1`] = `
Object {
  "calendar": Array [
    Object {
      "month": 1,
      "monthLong": "January",
      "monthShort": "Jan",
      "weeks": Array [
        Object {
          "days": Array [
            Object {
              "date": Date { 2017-12-31T00:00:00.000Z },
              "day": 31,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": true,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-01T00:00:00.000Z },
              "day": 1,
              "disabled": false,
              "highlighted": true,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-02T00:00:00.000Z },
              "day": 2,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-03T00:00:00.000Z },
              "day": 3,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-04T00:00:00.000Z },
              "day": 4,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-05T00:00:00.000Z },
              "day": 5,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-06T00:00:00.000Z },
              "day": 6,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 1,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-07T00:00:00.000Z },
              "day": 7,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-08T00:00:00.000Z },
              "day": 8,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-09T00:00:00.000Z },
              "day": 9,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-10T00:00:00.000Z },
              "day": 10,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-11T00:00:00.000Z },
              "day": 11,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-12T00:00:00.000Z },
              "day": 12,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-13T00:00:00.000Z },
              "day": 13,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 2,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-14T00:00:00.000Z },
              "day": 14,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-15T00:00:00.000Z },
              "day": 15,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-16T00:00:00.000Z },
              "day": 16,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-17T00:00:00.000Z },
              "day": 17,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-18T00:00:00.000Z },
              "day": 18,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-19T00:00:00.000Z },
              "day": 19,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-20T00:00:00.000Z },
              "day": 20,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": true,
              "today": false,
            },
          ],
          "weekNumber": 3,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-21T00:00:00.000Z },
              "day": 21,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-22T00:00:00.000Z },
              "day": 22,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-23T00:00:00.000Z },
              "day": 23,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-24T00:00:00.000Z },
              "day": 24,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-25T00:00:00.000Z },
              "day": 25,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-26T00:00:00.000Z },
              "day": 26,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-27T00:00:00.000Z },
              "day": 27,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 4,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-28T00:00:00.000Z },
              "day": 28,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-29T00:00:00.000Z },
              "day": 29,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-30T00:00:00.000Z },
              "day": 30,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-31T00:00:00.000Z },
              "day": 31,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-01T00:00:00.000Z },
              "day": 1,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-02T00:00:00.000Z },
              "day": 2,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-03T00:00:00.000Z },
              "day": 3,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 5,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-02-04T00:00:00.000Z },
              "day": 4,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-05T00:00:00.000Z },
              "day": 5,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-06T00:00:00.000Z },
              "day": 6,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-07T00:00:00.000Z },
              "day": 7,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-08T00:00:00.000Z },
              "day": 8,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-09T00:00:00.000Z },
              "day": 9,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-10T00:00:00.000Z },
              "day": 10,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 6,
          "year": 2018,
        },
      ],
      "year": 2018,
    },
  ],
  "highlighted": Date { 2018-01-01T00:00:00.000Z },
  "mode": "multi",
  "month": 1,
  "monthLong": "January",
  "monthShort": "Jan",
  "selected": Array [
    Date { 2018-01-10T00:00:00.000Z },
    Date { 2018-01-20T00:00:00.000Z },
  ],
  "weekdays": Array [
    Object {
      "long": "Sunday",
      "short": "Sun",
    },
    Object {
      "long": "Monday",
      "short": "Mon",
    },
    Object {
      "long": "Tuesday",
      "short": "Tue",
    },
    Object {
      "long": "Wednesday",
      "short": "Wed",
    },
    Object {
      "long": "Thursday",
      "short": "Thu",
    },
    Object {
      "long": "Friday",
      "short": "Fri",
    },
    Object {
      "long": "Saturday",
      "short": "Sat",
    },
  ],
  "year": 2018,
}
`;

exports[`buildCalendarContext mode: range 1`] = `
Object {
  "calendar": Array [
    Object {
      "month": 1,
      "monthLong": "January",
      "monthShort": "Jan",
      "weeks": Array [
        Object {
          "days": Array [
            Object {
              "date": Date { 2017-12-31T00:00:00.000Z },
              "day": 31,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": true,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-01T00:00:00.000Z },
              "day": 1,
              "disabled": false,
              "highlighted": true,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-02T00:00:00.000Z },
              "day": 2,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-03T00:00:00.000Z },
              "day": 3,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-04T00:00:00.000Z },
              "day": 4,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-05T00:00:00.000Z },
              "day": 5,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-06T00:00:00.000Z },
              "day": 6,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 1,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-07T00:00:00.000Z },
              "day": 7,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-08T00:00:00.000Z },
              "day": 8,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-09T00:00:00.000Z },
              "day": 9,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-10T00:00:00.000Z },
              "day": 10,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": true,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-11T00:00:00.000Z },
              "day": 11,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-12T00:00:00.000Z },
              "day": 12,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-13T00:00:00.000Z },
              "day": 13,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
          ],
          "weekNumber": 2,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-14T00:00:00.000Z },
              "day": 14,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-15T00:00:00.000Z },
              "day": 15,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-16T00:00:00.000Z },
              "day": 16,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-17T00:00:00.000Z },
              "day": 17,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-18T00:00:00.000Z },
              "day": 18,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-19T00:00:00.000Z },
              "day": 19,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-20T00:00:00.000Z },
              "day": 20,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": true,
              "rangeStart": false,
              "selected": true,
              "today": false,
            },
          ],
          "weekNumber": 3,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-21T00:00:00.000Z },
              "day": 21,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-22T00:00:00.000Z },
              "day": 22,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-23T00:00:00.000Z },
              "day": 23,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-24T00:00:00.000Z },
              "day": 24,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-25T00:00:00.000Z },
              "day": 25,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-26T00:00:00.000Z },
              "day": 26,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-27T00:00:00.000Z },
              "day": 27,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 4,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-28T00:00:00.000Z },
              "day": 28,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-29T00:00:00.000Z },
              "day": 29,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-30T00:00:00.000Z },
              "day": 30,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-31T00:00:00.000Z },
              "day": 31,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-01T00:00:00.000Z },
              "day": 1,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-02T00:00:00.000Z },
              "day": 2,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-03T00:00:00.000Z },
              "day": 3,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 5,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-02-04T00:00:00.000Z },
              "day": 4,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-05T00:00:00.000Z },
              "day": 5,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-06T00:00:00.000Z },
              "day": 6,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-07T00:00:00.000Z },
              "day": 7,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-08T00:00:00.000Z },
              "day": 8,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-09T00:00:00.000Z },
              "day": 9,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-10T00:00:00.000Z },
              "day": 10,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "rangeEnd": false,
              "rangeStart": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 6,
          "year": 2018,
        },
      ],
      "year": 2018,
    },
  ],
  "highlighted": Date { 2018-01-01T00:00:00.000Z },
  "mode": "range",
  "month": 1,
  "monthLong": "January",
  "monthShort": "Jan",
  "selected": Array [
    Date { 2018-01-10T00:00:00.000Z },
    Date { 2018-01-20T00:00:00.000Z },
  ],
  "weekdays": Array [
    Object {
      "long": "Sunday",
      "short": "Sun",
    },
    Object {
      "long": "Monday",
      "short": "Mon",
    },
    Object {
      "long": "Tuesday",
      "short": "Tue",
    },
    Object {
      "long": "Wednesday",
      "short": "Wed",
    },
    Object {
      "long": "Thursday",
      "short": "Thu",
    },
    Object {
      "long": "Friday",
      "short": "Fri",
    },
    Object {
      "long": "Saturday",
      "short": "Sat",
    },
  ],
  "year": 2018,
}
`;

exports[`buildCalendarContext mode: single 1`] = `
Object {
  "calendar": Array [
    Object {
      "month": 1,
      "monthLong": "January",
      "monthShort": "Jan",
      "weeks": Array [
        Object {
          "days": Array [
            Object {
              "date": Date { 2017-12-31T00:00:00.000Z },
              "day": 31,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": true,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-01T00:00:00.000Z },
              "day": 1,
              "disabled": false,
              "highlighted": true,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-02T00:00:00.000Z },
              "day": 2,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-03T00:00:00.000Z },
              "day": 3,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-04T00:00:00.000Z },
              "day": 4,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-05T00:00:00.000Z },
              "day": 5,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-06T00:00:00.000Z },
              "day": 6,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 1,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-07T00:00:00.000Z },
              "day": 7,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-08T00:00:00.000Z },
              "day": 8,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-09T00:00:00.000Z },
              "day": 9,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-10T00:00:00.000Z },
              "day": 10,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": true,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-11T00:00:00.000Z },
              "day": 11,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-12T00:00:00.000Z },
              "day": 12,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-13T00:00:00.000Z },
              "day": 13,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 2,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-14T00:00:00.000Z },
              "day": 14,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-15T00:00:00.000Z },
              "day": 15,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-16T00:00:00.000Z },
              "day": 16,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-17T00:00:00.000Z },
              "day": 17,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-18T00:00:00.000Z },
              "day": 18,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-19T00:00:00.000Z },
              "day": 19,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-20T00:00:00.000Z },
              "day": 20,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 3,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-21T00:00:00.000Z },
              "day": 21,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-22T00:00:00.000Z },
              "day": 22,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-23T00:00:00.000Z },
              "day": 23,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-24T00:00:00.000Z },
              "day": 24,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-25T00:00:00.000Z },
              "day": 25,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-26T00:00:00.000Z },
              "day": 26,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-27T00:00:00.000Z },
              "day": 27,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 4,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-01-28T00:00:00.000Z },
              "day": 28,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-29T00:00:00.000Z },
              "day": 29,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-30T00:00:00.000Z },
              "day": 30,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-01-31T00:00:00.000Z },
              "day": 31,
              "disabled": false,
              "highlighted": false,
              "nextMonth": false,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-01T00:00:00.000Z },
              "day": 1,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-02T00:00:00.000Z },
              "day": 2,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-03T00:00:00.000Z },
              "day": 3,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 5,
          "year": 2018,
        },
        Object {
          "days": Array [
            Object {
              "date": Date { 2018-02-04T00:00:00.000Z },
              "day": 4,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-05T00:00:00.000Z },
              "day": 5,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-06T00:00:00.000Z },
              "day": 6,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-07T00:00:00.000Z },
              "day": 7,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-08T00:00:00.000Z },
              "day": 8,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-09T00:00:00.000Z },
              "day": 9,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
            Object {
              "date": Date { 2018-02-10T00:00:00.000Z },
              "day": 10,
              "disabled": false,
              "highlighted": false,
              "nextMonth": true,
              "prevMonth": false,
              "selected": false,
              "today": false,
            },
          ],
          "weekNumber": 6,
          "year": 2018,
        },
      ],
      "year": 2018,
    },
  ],
  "highlighted": Date { 2018-01-01T00:00:00.000Z },
  "mode": "single",
  "month": 1,
  "monthLong": "January",
  "monthShort": "Jan",
  "selected": Date { 2018-01-10T00:00:00.000Z },
  "weekdays": Array [
    Object {
      "long": "Sunday",
      "short": "Sun",
    },
    Object {
      "long": "Monday",
      "short": "Mon",
    },
    Object {
      "long": "Tuesday",
      "short": "Tue",
    },
    Object {
      "long": "Wednesday",
      "short": "Wed",
    },
    Object {
      "long": "Thursday",
      "short": "Thu",
    },
    Object {
      "long": "Friday",
      "short": "Fri",
    },
    Object {
      "long": "Saturday",
      "short": "Sat",
    },
  ],
  "year": 2018,
}
`;
